--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crud-ii",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js.",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
